Issue #77: Admin requirements dark mode improvements. Fixes #77. Plus a few other dark-mode focused tweaks.

--- a/styles/base/_backdrop-overrides.scss
+++ b/styles/base/_backdrop-overrides.scss
@@ -250,6 +250,10 @@ a.button-primary:focus:hover {
   padding-top: var(--gin-spacing-xs);
 }
 
+.form-item.form-item-enable-darkmode {
+  padding-top: 0;
+}
+
 .tabs {
   display: flex;
   border: 0;
