--- a/styles/base/_views.scss
+++ b/styles/base/_views.scss
@@ -441,6 +441,7 @@
 
 #edit-display-settings-main {
   padding: var(--gin-spacing-l);
+  background-color: transparent;
 }
 
 .views-display-column,
